# betterfit

./: README.md  mypy.ini  pyproject.toml
.github/workflows/: python-publish.yaml
src/betterfit/: __init__.py  dataset.py  propagate.py
src/betterfit/fits/: fit.py  linear.py
tests/: getting_started.py  test_weighted_linear.py
